# link-alcs

./: CMakeLists.txt  README.md
alcs/: CMakeLists.txt
alcs/inc/: alcs_api.h  alcs_api_internal.h  alcs_coap.h  alcs_export.h  alcs_export_dlcp.h  alcs_export_server.h  alcs_export_st.h  alcs_export_st_ali.h  alcs_timer.h  linked_list.h
alcs/src/: alcs_api.c  alcs_client.c  alcs_coap.c  alcs_impl_ali.c  alcs_server.c  alcs_timer.c  dlcp_impl.c  linked_list.c
coap/: CMakeLists.txt  CoAPDeserialize.c  CoAPExport.c  CoAPExport.h  CoAPInternal.h  CoAPMessage.c  CoAPMessage.h  CoAPNetwork.c  CoAPNetwork.h  CoAPObserve.c  CoAPObserve.h  CoAPPlatform.c  CoAPPlatform.h  CoAPResource.c  CoAPResource.h  CoAPServer.c
platform/: CMakeLists.txt  iot_import.h  iot_import_aes.h  iot_import_kv.h
platform/os/darwin/: HalOSDarwin.c  HalUDPLinux.c
platform/os/ubuntu/: HAL_OS_linux.c  cJSON.c  iot_import_aes.c  kv.c  kv.h
platform/os/win7/: HalOSWin7.c  HalUDPWin7.c
utils/: CMakeLists.txt
utils/LITE-log/: lite-log.h
utils/digest/: utils_base64.c  utils_base64.h  utils_hmac.c  utils_hmac.h  utils_md5.c  utils_md5.h  utils_sha1.c  utils_sha1.h
utils/json/: json_parser.c  json_parser.h
